# svg2b2d

./: CMakeLists.txt  FindBlend2D.cmake  README.md
dependency/lib/Release/: blend2d.lib
test/: CMakeLists.txt  main.cpp
